# pytest-appium-scheduler

./: .gitignore  LICENSE  README.md  conftest.py  device.example.yaml  pyproject.toml
.github/workflows/: publish.yml
pytest_appium_scheduler/: __init__.py  config.py  debug.py  device.py  driver.py  exceptions.py  hooks.py  markers.py  plugin.py  scheduler.py  xdist_scheduler.py
tests/: test_plugin.py  test_real_device.py
